Fixing some spacing issues and removing selected js

--- a/sagebrew/sagebrew/static/less/sb/temp.less
+++ b/sagebrew/sagebrew/static/less/sb/temp.less
@@ -243,6 +243,9 @@
 .quest-garden{
   color: #472816;
 }
+.quest-garden-paragraph{
+   padding-right: 50px;
+}
 .quest-garden-title-lg{
   &:extend(.quest-block-title-lg);
   margin-top: 33%;
